--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!--汉语转拼音-->
+        <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
