--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -21,6 +21,9 @@ avalon.address-suggest.geocoder-url=http://apis.map.qq.com/ws/geocoder/v1/
 avalon.address-suggest.getpois-url=http://apis.map.qq.com/ws/geocoder/v1/
 
 logging.level.com.example.avalon=debug
+
+spring.jackson.serialization.indent_output=true
+#spring.jackson.property-naming-strategy=com.fasterxml.jackson.databind.PropertyNamingStrategy.SnakeCaseStrategy
 
 server.port=8001
 
