--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.test-on-borrow=true
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 avalon.address-suggest.tencent-keys[0]=RLHBZ-WMPRP-Q3JDS-V2IQA-JNRFH-EJBHL
 avalon.address-suggest.tencent-keys[1]=RRXBZ-WC6KF-ZQSJT-N2QU7-T5QIT-6KF5X
